[package]
name = "insulink"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive", "env"] }
dotenv = "0.15.0"
futures-lite = "2.3.0"
lapin = "2.3.4"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
